# pyfdb

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  conftest.py  processed_fdb.h  processed_fdc.h  pyfdb.py  pyproject.toml  requirements.txt  setup.py  test.py  tox.ini
.github/: ci-config.yml  ci-hpc-config.yml
.github/workflows/: cd.yml  check-publish.yaml  ci.yml  sync.yml
docs/: Doxyfile.in  conf.py  index.rst  requirements.in  requirements.txt
docs/content/: reference.rst  technical-introduction.rst
docs/content/technical-introduction/: api.rst
docs/source/: conf.py  index.rst
pyfdb/: __init__.py  fdb_api.py  processed_fdb.h  pyfdb.py
src/: pyfdb.cpp
src/pyfdb/: __init__.py  processed_fdb.h  pyfdb.py  version.py
tests/: __init__.py  fixtures.py  test.py  test_lib.py  test_passing_config_directly.py  test_pyfdb.py  util.py
tests/integration/: test_archive_scenarios.py  test_passing_config_directly.py  test_pyfdb.py
tests/unit/: archive.py  conftest.py  test_archive.py  test_pyfdb.py  test_wipe.py  test_wipe_purge.py
